fix: style added for scrollbars (webkit)

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: var(--coolYellow);
+}
+
 body {
     margin: 0;
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
